--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@ body {background-color:#ffffcc;
 現在コンテンツ準備中です。<br>
 公開までしばらくお待ちください。<br>
 <br>
-<a href="mailto:xxx@xxxxxxxx.co.jp">xxx@xxxxxxxx.co.jp</a>
+<a href="mailto:nomura@ncm-git.co.jp">nomura@ncm-git.co.jp</a>
 
 </td>
 </tr>
