表示色の変更

--- a/test.html
+++ b/test.html
@@ -3,9 +3,9 @@
 <head>
 <title>€”õ’†</title>
 <style type="text/css"><!--
-body {background-color:#ffffcc;
+body {background-color:#ccffff;
 }
-.msg {background-color:#ffcc66;
+.msg {background-color:#66ccff;
       color:#000000;
       text-align:center;
 }
