test2の変更とtest1のメール送信先の変更

--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@ body {background-color:#ccffff;
 現在コンテンツ準備中です。<br>
 公開までしばらくお待ちください。<br>
 <br>
-<a href="mailto:nomura@ncm-git.co.jp">nomura@ncm-git.co.jp</a>
+<a href="mailto:tsutomu@ncm-git.co.jp">tsutomu@ncm-git.co.jp</a>
 <br>
 <a href="test2.html">html2へのリンク</a>
 
