--- a/test2.html
+++ b/test2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>準備中</title>
+<title>公開未定</title>
 <style type="text/css"><!--
 body {background-color:#ccffff;
 }
@@ -17,8 +17,7 @@ body {background-color:#ccffff;
 <tr>
 <td width="380" height="150" class="msg">
 
-現在コンテンツ準備中です。<br>
-公開までしばらくお待ちください。<br>
+公開は延期します。<br>
 <br>
 </td>
 </tr>
