コメントの変更

--- a/test2.html
+++ b/test2.html
@@ -17,7 +17,7 @@ body {background-color:#ccffff;
 <tr>
 <td width="380" height="150" class="msg">
 
-公開は延期します。<br>
+公開は12月ごろです。<br>
 <br>
 </td>
 </tr>
